add placeholders for zooming

--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,8 @@
 <body>
   <script type="text/javascript" src="client.js"></script>
 
+  <button id="zoom-in">zoom in</button>
+  <button id="zoom-out">zoom out</button>
 
 <img id="image" src="image.jpg">
 
