make zoomIn & zoomOut work, cleanup

--- a/example/index.html
+++ b/example/index.html
@@ -5,10 +5,19 @@
 <body>
   <script type="text/javascript" src="client.js"></script>
 
-  <button id="zoom-in">zoom in</button>
-  <button id="zoom-out">zoom out</button>
+<div id="image1">
+  <button class="zoom-in">zoom in</button>
+  <button class="zoom-out">zoom out</button>
 
-<img id="image" src="image.jpg">
+  <img class="image" src="image.jpg">
+</div>
+
+<div id="image2">
+  <button class="zoom-in">zoom in</button>
+  <button class="zoom-out">zoom out</button>
+
+  <img class="image" src="image.jpg">
+</div>
 
 </body>
 </html>
