add enable/disable functionality

--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,8 @@
 <div id="image1">
   <button class="zoom-in">zoom in</button>
   <button class="zoom-out">zoom out</button>
+  <button class="enable">enable</button>
+  <button class="disable">disable</button>
 
   <img class="image" src="image.jpg">
 </div>
@@ -15,6 +17,8 @@
 <div id="image2">
   <button class="zoom-in">zoom in</button>
   <button class="zoom-out">zoom out</button>
+  <button class="enable">enable</button>
+  <button class="disable">disable</button>
 
   <img class="image" src="image.jpg">
 </div>
