--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
   <button class="enable">enable</button>
   <button class="disable">disable</button>
 
-  <img class="image" src="image.jpg">
+  <div class="image-cropper-container"></div>
 </div>
 
 <div id="image2">
@@ -20,7 +20,7 @@
   <button class="enable">enable</button>
   <button class="disable">disable</button>
 
-  <img class="image" src="image.jpg">
+  <div class="image-cropper-container"></div>
 </div>
 
 </body>
