--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,18 @@
 <html>
 <head>
   <title></title>
+  <style type="text/css">
+
+    .slider .line {
+      background-color: white;
+    }
+    .slider .jack {
+      background-color: white;
+      border-radius: 5px;
+    }
+
+  </style>
+
 </head>
 <body>
   <script type="text/javascript" src="client.js"></script>
