test that it behaves correctly when container has mergin

--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,10 @@
   <title></title>
   <style type="text/css">
 
+    .slider {
+      margin-left: 20px;
+    }
+
     .slider .line {
       background-color: white;
     }
