slider: rename jack to handle

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
     .slider .line {
       background-color: white;
     }
-    .slider .jack {
+    .slider .handle {
       background-color: white;
       border-radius: 5px;
     }
