--- a/example/index.html
+++ b/example/index.html
@@ -14,6 +14,9 @@
       background-color: white;
       border-radius: 5px;
     }
+    .image-example {
+      margin-bottom: 20px;
+    }
 
   </style>
 
@@ -21,14 +24,21 @@
 <body>
   <script type="text/javascript" src="client.js"></script>
 
-<div id="image1">
+<div id="image1" class="image-example">
   <button class="enable">enable</button>
   <button class="disable">disable</button>
 
   <div class="image-cropper-container"></div>
 </div>
 
-<div id="image2">
+<div id="image2" class="image-example">
+  <button class="enable">enable</button>
+  <button class="disable">disable</button>
+
+  <div class="image-cropper-container"></div>
+</div>
+
+<div id="image3" class="image-example">
   <button class="enable">enable</button>
   <button class="disable">disable</button>
 
