add some more styling

--- a/example/index.html
+++ b/example/index.html
@@ -4,11 +4,13 @@
   <style type="text/css">
 
     .slider {
-      margin-left: 20px;
+      left: 10px;
+      top: 10px;
     }
 
     .slider .line {
       background-color: white;
+      opacity: 0.7;
     }
     .slider .handle {
       background-color: white;
