--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,14 @@
       background-color: white;
       border-radius: 5px;
     }
+
+    .navigation .zoom-text {
+      color: white;
+      position: absolute;
+      bottom: 10px;
+      left: 122px;
+    }
+
     .image-example {
       margin-bottom: 20px;
     }
@@ -44,7 +52,11 @@
   <button class="enable">enable</button>
   <button class="disable">disable</button>
 
-  <div class="image-cropper-container"></div>
+  <div class="image-cropper-container">
+    <div class="navigation">
+      <span class="zoom-text">Zoom</span>
+    </div>
+  </div>
 </div>
 
 </body>
