--- a/example/index.html
+++ b/example/index.html
@@ -8,11 +8,11 @@
       top: 10px;
     }
 
-    .slider .line {
+    .navigation .slider .line {
       background-color: white;
       opacity: 0.7;
     }
-    .slider .handle {
+    .navigation .slider .handle {
       background-color: white;
       border-radius: 5px;
     }
@@ -22,6 +22,10 @@
       position: absolute;
       bottom: 10px;
       left: 122px;
+    }
+
+    .navigation .save {
+      color: white;
     }
 
     .image-example {
