add example with result-image, make it work as expected

--- a/example/index.html
+++ b/example/index.html
@@ -81,5 +81,19 @@
   </div>
 </div>
 
+<div id="image2" class="image-example">
+  <button class="enable">enable</button>
+
+  <div class="image-cropper-container">
+    <div class="navigation">
+      <span class="zoom-text">Zoom</span>
+      <div class="buttons">
+        <button class="cancel">cancel</button>
+        <button class="save">save</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
