break out & expose a way to set image
fixes #9

--- a/example/index.html
+++ b/example/index.html
@@ -69,6 +69,7 @@
 
 <div id="image" class="image-example">
   <button class="enable">enable</button>
+  <button class="change">change</button>
 
   <div class="image-cropper-container">
     <div class="navigation">
